[gd_scene load_steps=4 format=2]

[ext_resource path="res://cutscene_engine/cutscene_scripts/DialogueStarter.gd" type="Script" id=1]
[ext_resource path="res://cutscene_engine/cutscene_scenes/DialogueBox.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.964, 169.819 )

[node name="DialogueStarter" type="Node2D"]
pause_mode = 2
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -466.23, -425.219 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 463.982, 420 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Area2D"]
margin_left = 366.0
margin_top = 249.0
margin_right = 559.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueInterface" type="CanvasLayer" parent="."]

[node name="DialogueBox" parent="DialogueInterface" instance=ExtResource( 2 )]
visible = false
margin_bottom = -20.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
